fixing spacing

--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@ p {
 .section {
   max-width: 1800px;
   margin: 0 auto;
-  margin-bottom: 5rem;
-  padding: 8rem 1rem;
+  padding: 8rem 1rem 5rem 1rem;
 }
 
 .section-text {
